...
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAccounts"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/sortfromAtoZ"
        android:title="@string/sortfromAtoZ" />
    <item
...
